<resources>
    <string name="app_name">CoffeeCup</string>
    <string name="quantity">QUANTITY</string>
    <string name="number">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="price">PRICE</string>
    <string name="currentprice">$0</string>
    <string name="order">ORDER</string>
    <string name="toppings">TOPPINGS</string>
    <string name="addCream">Whipped Cream</string>
    <string name="addChocolate">Chocolate</string>
    <string name="Username">Enter your Name</string>
</resources>
